test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/module_fn.sw
library;

#[payable(invalid)]
#[error_type(invalid)]
#[error(invalid)]
//! Invalid inner comment.
fn module_function() {}